FIX: Cards at same height

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <i class="bi bi-file-earmark-text me-2"></i>Podcast Script
                     </div>
                     <div class="card-body">
-                        <textarea id="scriptContent" class="form-control" rows="15" readonly></textarea>
+                        <textarea id="scriptContent" class="form-control" style="height: 400px; resize: none;" readonly></textarea>
                     </div>
                 </div>
             </div>
