--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="row mt-4">
             <div class="col-md-6">
-                <div class="card">
+                <div class="card d-none">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <span><i class="bi bi-chat-dots me-2"></i>Content</span>
                     </div>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card">
+                <div class="card d-none">
                     <div class="card-header">
                         <i class="bi bi-file-earmark-text me-2"></i>Podcast Script
                     </div>
